tests/compile-fail/reserved/try_match_multiple_arms.stderr
error: no rules expected the token `,`
 --> tests/compile-fail/reserved/try_match_multiple_arms.rs:2:57
  |
2 |     let _ = try_match::try_match!(Some(42), Some(_) => 1, None => 0);
  |                                                         ^ no rules expected this token in macro call
